- Avoid deprecated warnings when using PHP 5