@@ -23,6 +23,8 @@
 //
 //
 
+require_once 'kernel/common/i18n.php';
+
 class eZXMLPublisherType extends eZWorkflowEventType
 {
     public function eZXMLPublisherType()
