@@ -1,1 +1,4 @@
 - Avoid deprecated warnings when using PHP 5
+
+*Bugfixes:
+- Fixed bug #16198: eZ XML Installer doesn't save array settings correctly
